--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: base
 description: A new Flutter plugin project.
 version: 0.0.1
-homepage:
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
+  google_sign_in: ^6.1.5
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
